fixed bounce point on branch bounce

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Javascript Balls Demo</title>
+	<title>Javascript Balls from Coding Dojo</title>
 </head>
 <body>
 
